# fineltra

./: .gitignore  .travis.yml  Makefile.in  README.md  Version.config  autogen.sh  configure.ac  fineltra.c  fineltra.control.in  fineltra.sql.in  fineltra_config.h.in
regress/: README  symbolsclash.sql
regress/expected/: fineltra.out
regress/sql/: fineltra.sql
